--- a/templates/pages/recipe/index.html.twig
+++ b/templates/pages/recipe/index.html.twig
@@ -8,7 +8,8 @@
 	<div class="container mt-4">
 		<h1>Mes recettes</h1>
 
-		{# <a href="{{ path('recipe.new') }}  " class="btn btn-info">Créer un ingrédient</a> #}
+
+		 <a href="{{ path('recipe.new') }}  " class="btn btn-info">Créer une recette</a> 
 
 		{% for message in app.flashes('success') %}
 			<div class="alert alert-success">
@@ -48,9 +49,10 @@
 						</td>
 						<td>{{ recipe.cookingTime }}</td>
 						<td>
-							{% for ingredient in recipe.ingredients %}
-								{{ ingredient.name }}
+						{% for ingredient in recipe.ingredients %}
+                {{ ingredient.name }}	
 							{% endfor %}
+							
 						</td>
 						<td>{{ recipe.steps }}</td>
 						<td>
