--- a/templates/pages/security/login.html.twig
+++ b/templates/pages/security/login.html.twig
@@ -3,10 +3,9 @@
 {% block title %}Connexion{% endblock %}
 
 {% block body %}
-<div class="container">
-    <h1 class="mt-4">Formulaire de connexion</h1>
-    
-      {% for message in app.flashes('success') %}
+<div class="container text-center">
+ <h1 class="mt-4  mb-5">Page de connexion</h1>
+ {% for message in app.flashes('success') %}
         <div class="alert alert-success">
             {{ message }}
         </div>
@@ -17,7 +16,10 @@
       {{ error.messageKey|trans(error.messageData, 'security') }}
       </div>
       {% endif %}
-
+<div class="row">
+    <div class="col">
+     <h2>Espace patient</h2>
+      
     <form action="{{ path('security.login') }}" method ="post">
         <div class="form-group">
       <label for="username" class="form-label mt-4">Adresse email</label>
@@ -36,5 +38,25 @@
     <button type="submit" class="btn btn-primary mt-4"><a class="nav-link" href="/inscription">Inscription</a></button>
     
 </div>
+    
+    <div class="col">
+     <h2>Espace administration</h2>
+       
+    <form action="{{ path('security.login') }}" method ="post">
+        <div class="form-group">
+      <label for="username" class="form-label mt-4">Adresse email</label>
+      <input type="email" class="form-control" id="username" name="_username" placeholder="exemple@boom.fr" value="{{ last_username }}">
+      <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+    </div>
+
+    <div class="form-group">
+      <label for="password" class="form-label mt-4">Mot de passe</label>
+      <input type="password" class="form-control" id="password" name ="_password" placeholder="********">
+    </div>
+    <button type="submit" class="btn btn-primary mt-4">Se connecter</button>
+    </form>
+     </div>
+    </div>
+    
 
 {% endblock %}
