Correction user.new

--- a/templates/pages/user/admin.html.twig
+++ b/templates/pages/user/admin.html.twig
@@ -9,7 +9,7 @@
 	<div class="container mt-4 text-center">
 		<h1 class="mt-4 text-darl">Pade d'administrateur</h1>
 		<ul class="mt-4 w-50">
-			<div class="d-grid gap-2">
+			<div class="d-grid gap-2">  
 				<button class="btn btn-lg btn-primary mt-5 fs-3" type="button">
 					<a class="nav-link" href="{{ path('ingredient.index') }}">Ingredients</a>
 				</button>
@@ -22,12 +22,12 @@
 				<button class="btn btn-lg btn-primary mt-5 fs-3" type="button">
 					<a class="nav-link" href="{{ path('diet.index') }}">Régimes</a>
 				</button>
-				{# <button class="btn btn-lg btn-primary mt-5 fs-3" type="button">
-					<a class="nav-link" href="{{ path('user.userList') }}">Patients</a>
-				</button> #}
-				{# <button class="btn btn-lg btn-primary mt-5 fs-3" type="button">
-					<a class="nav-link" href="{{ path('user.new') }}">Enregistrer le patient</a>
-				</button> #}
+				<button class="btn btn-lg btn-primary mt-5 fs-3" type="button">
+					<a class="nav-link" href="/users">Patients</a>
+				</button>
+				<button class="btn btn-lg btn-primary mt-5 fs-3" type="button">
+					<a class="nav-link" href="{{ path('user.new') }}">Céer un patient</a>
+				</button>
 			</div>
 
 
