--- a/templates/pages/recipe/new.html.twig
+++ b/templates/pages/recipe/new.html.twig
@@ -1,87 +1,108 @@
 {% extends 'base.html.twig' %}
-{% block title %} Créer une nouvelle recette {% endblock %}
-{% block body %}
-<div class="container">
-
-    <h1 class="mt-4">Créer une recette</h1>
-    {{ form_start(form) }}
-
-
-<div class="form-group">
-    {{ form_label(form.name) }}
-    {{ form_widget(form.name) }}
-    <div class="form-error">
-        {{ form_errors(form.name) }}
-    </div>
-</div>
-
-<div class="form-group">
-    {{ form_label(form.description) }}
-    {{ form_widget(form.description) }}
-    <div class="form-error">
-        {{ form_errors(form.description) }}
-    </div>
-</div>
-
-<div class="form-group">
-    {{ form_label(form.preparationTime) }}
-    {{ form_widget(form.preparationTime) }}
-    <div class="form-error">
-        {{ form_errors(form.preparationTime) }}
-    </div>
-</div>
-
-<div class="form-group">
-    {{ form_label(form.pauseTime) }}
-    {{ form_widget(form.pauseTime) }}
-    <div class="form-error">
-        {{ form_errors(form.pauseTime) }}
-    </div>
-</div>
-
-<div class="form-group">
-    {{ form_label(form.cookingTime) }}
-    {{ form_widget(form.cookingTime) }}
-    <div class="form-error">
-        {{ form_errors(form.cookingTime) }}
-    </div>
-</div>
-
-<div class="form-group">
-    {{ form_label(form.steps) }}
-    {{ form_widget(form.steps) }}
-    <div class="form-error">
-        {{ form_errors(form.steps) }}
-    </div>
-</div>
-
-<div class="form-group mt-4 fs-6">
-    {{ form_label(form.ingredients) }}
-    {{ form_widget(form.ingredients) }}
-    <div class="form-error">
-        {{ form_errors(form.ingredients) }}
-    </div>
-</div>
-<div class="form-group mt-4">
-    {{ form_label(form.allergens) }}
-    {{ form_widget(form.allergens) }}
-    <div class="form-error">
-        {{ form_errors(form.allergens) }}
-    </div>
-</div>
-
-<div class="form-group mt-4">
-    {{ form_label(form.diets) }}
-    {{ form_widget(form.diets) }}
-    <div class="form-error">
-        {{ form_errors(form.diets) }}
-    </div>
-</div>
-
-    <div class="form-group mb-4">
-        {{ form_row(form.submit) }}
-    </div>
-
-    {{ form_end(form) }}
-</div>
+{% block title %}
+	Créer une nouvelle recette
 {% endblock %}
+{% block body %}
+	<div class="container">
+
+		<h1 class="mt-4">Créer une recette</h1>
+		{{ form_start(form) }}
+
+
+		<div class="form-group">
+			{{ form_label(form.name) }}
+			{{ form_widget(form.name) }}
+			<div class="form-error">
+				{{ form_errors(form.name) }}
+			</div>
+		</div>
+
+		<div class="form-group">
+			{{ form_label(form.description) }}
+			{{ form_widget(form.description) }}
+			<div class="form-error">
+				{{ form_errors(form.description) }}
+			</div>
+		</div>
+
+		<div class="form-group">
+			{{ form_label(form.preparationTime) }}
+			{{ form_widget(form.preparationTime) }}
+			<div class="form-error">
+				{{ form_errors(form.preparationTime) }}
+			</div>
+		</div>
+
+		<div class="form-group">
+			{{ form_label(form.pauseTime) }}
+			{{ form_widget(form.pauseTime) }}
+			<div class="form-error">
+				{{ form_errors(form.pauseTime) }}
+			</div>
+		</div>
+
+		<div class="form-group">
+			{{ form_label(form.cookingTime) }}
+			{{ form_widget(form.cookingTime) }}
+			<div class="form-error">
+				{{ form_errors(form.cookingTime) }}
+			</div>
+		</div>
+
+		<div class="form-group">
+			{{ form_label(form.steps) }}
+			{{ form_widget(form.steps) }}
+			<div class="form-error">
+				{{ form_errors(form.steps) }}
+			</div>
+		</div>
+<div class="form-group">
+		{{ form_label(form.ingredients) }}
+		<br>
+		<div class="choiceList-wrapper">
+			{% for field in form.ingredients %}
+				<div style="min-width: 15%;">
+					{{ form_widget(field) }}
+					{{ form_label(field) }}
+				</div>
+			{% endfor %}
+		</div>
+</div>
+<div class="form-group">
+		{{ form_label(form.allergens) }}
+		<br>
+		<div class="choiceList-wrapper">
+			{% for field in form.allergens %}
+				<div style="min-width: 15%;">
+					{{ form_widget(field) }}
+					{{ form_label(field) }}
+				</div>
+			{% endfor %}
+		</div>
+</div>
+
+<div class="form-group">
+		{{ form_label(form.diets) }}
+		<br>
+		<div class="choiceList-wrapper">
+			{% for field in form.diets %}
+				<div style="min-width: 15%;">
+					{{ form_widget(field) }}
+					{{ form_label(field) }}
+				</div>
+			{% endfor %}
+		</div>
+		</div>
+		<div class="form-group">
+			{{ form_label(form.isBase) }}
+			{{ form_widget(form.isBase) }}
+			<div class="form-error">
+				{{ form_errors(form.isBase) }}
+			</div>
+			<div class="form-group mb-4">
+				{{ form_row(form.submit) }}
+			</div>
+
+			{{ form_end(form) }}
+		</div>
+	{% endblock %}
