--- a/templates/pages/user/index.html.twig
+++ b/templates/pages/user/index.html.twig
@@ -1,19 +1,65 @@
 {% extends 'base.html.twig' %}
 
-{% block title %} Page d'Accueil {% endblock %}
+{% block title %}
+	La liste de patients
+{% endblock %}
 
 {% block body %}
+	<div class="container mt-4">
+		<h1>La liste de patients</h1>
+		<a href="{{ path('user.new') }} " class="btn btn-info">Créer un patient</a>
 
-<div class="container mt-4 text-center">
-<h1 class="mt-4 text-darl">Mes recettes</h1>
- <ul class="mt-4 w-50">
-               <div class="mt-4>
-							{% for recipe in recipes %}
-								{{ user.recipe }}
+		{% for message in app.flashes('success') %}
+			<div class="alert alert-success">
+				{{ message }}
+			</div>
+		{%endfor %}
+		<table class="table table-hover">
+			<thead>
+				<tr>
+					<th scope="col" class="fs-5">Numéro</th>
+					<th scope="col" class="fs-5">Nom</th>
+					<th scope="col" class="fs-5">Email</th>
+					<th scope="col" class="fs-5">Date de naissance</th>
+					<th scope="col" class="fs-5">Alergènes</th>
+					<th scope="col" class="fs-5">Régimes</th>
+					<th scope="col" class="fs-5">Recettes</th> 
+					<th scope="col" class="fs-5">Edition</th>
+					<th scope="col" class="fs-5">Suppression</th>
+				</tr>
+			</thead>
+			<tbody>
+				{% for user in users %}
+					<tr class="table-primary">
+						<th scope="row">{{ user.id }}</th>
+						<td class="text-capitalize">{{ user.fullName }}</td>
+						<td>{{ user.email }}</td>
+						<td>{{ user.dateOfBirth|date('d-m-Y') }}</td>
+						<td>
+							{% for allergen in user.allergens %}
+								{{ allergen.name }}
 							{% endfor %}
-						</div>
-              
+						</td>
+						<td>
+							{% for diet in user.diets %}
+								{{ diet.name }}
+							{% endfor %}
+						</td>
+						<td>
+							{% for recipe in user.recipes %}
+								{{ recipe.name }}
+							{% endfor %}
+						</td>
+						<td>
+							<a href="{{ path('user.edit', {id: user.id}) }}" class="btn btn-danger">Modifier</a>
+						</td>
+						<td>
+							<a href="{{ path('user.delete', {id: user.id}) }}" class="btn btn-warning">Supprimer</a>
+						</td>
+					</tr>
 
-            
-</div>
+				{% endfor %}
+			</tbody>
+		</table>
+	</div>
 {% endblock %}
