add Mark for recipes

--- a/templates/partials/_header.html.twig
+++ b/templates/partials/_header.html.twig
@@ -15,7 +15,7 @@
 					<a class="nav-link fs-5" href="#">Contact</a>
 				</li>
 				<li class="nav-item">
-						<a class="nav-link fs-5" href="{{ path('recipe.index') }}">Recettes</a>
+						<a class="nav-link fs-5" href="{{ path('recipe.index_public') }}">Recettes de base</a>
 					</li>
 				{% if app.user %}
 					<li class="nav-item">
