--- a/templates/pages/home/index.html.twig
+++ b/templates/pages/home/index.html.twig
@@ -3,22 +3,31 @@
 {% block title %} Page d'Accueil {% endblock %}
 
 {% block body %}
-<style>
-    /*.example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-   /* .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
 
 <div class="container mt-4">
     <div class="jumbotron">
-        <h1 class="display-5">Sandrine Coupart - diététicienne-nutritionniste</h1>
+        <h1 class="display-5 text-center">Sandrine Coupart <br>  diététicienne-nutritionniste</h1>
         <p class="lead">Je m'appelle Sandrine Coupart et je suis diététicienne-nutritionniste dont le cabinet est situé à Caen. En tant que
             professionnelle de santé, je prends en charge des patients dans le cadre de consultations diététiques.
             J'anime également des ateliers de prévention et d’information sur la nutrition.</p>
         <hr class="my-4">
-        <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
-        <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
     </div>
-
+<div class="recipes">
+<h2 class="mt-4 text-center mb-3">Recettes de base</h2>
+		<div class="d-flex justify-content-between flex-wrap">
+			{% for recipe in recipes %}
+				<div class="card border-primary mb-3" style="max-width: 20rem;">
+					<div class="card-header">Recette numéro
+						{{ recipe.id }}</div>
+					<div class="card-body">
+						<h4 class="card-title">{{ recipe.name }}</h4>
+						<p class="card-text">{{ recipe.description|slice(0, 100) ~ '...'  }}</p>
+					</div>
+				</div>
+			{% endfor %}
+		</div>
+	</div>
 </div>
+
 {% endblock %}
 
