--- a/templates/pages/recipe/new.html.twig
+++ b/templates/pages/recipe/new.html.twig
@@ -94,10 +94,10 @@
 		</div>
 		</div>
 		<div class="form-group">
-			{{ form_label(form.isBase) }}
-			{{ form_widget(form.isBase) }}
+			{{ form_label(form.isPublic) }}
+			{{ form_widget(form.isPublic) }}
 			<div class="form-error">
-				{{ form_errors(form.isBase) }}
+				{{ form_errors(form.isPublic) }}
 			</div>
 			<div class="form-group mb-4">
 				{{ form_row(form.submit) }}
