--- a/templates/pages/recipe/new.html.twig
+++ b/templates/pages/recipe/new.html.twig
@@ -16,6 +16,8 @@
 				{{ form_errors(form.name) }}
 			</div>
 		</div>
+   
+
 
 		<div class="form-group">
 			{{ form_label(form.description) }}
@@ -93,12 +95,14 @@
 			{% endfor %}
 		</div>
 		</div>
+
 		<div class="form-group">
 			{{ form_label(form.isPublic) }}
 			{{ form_widget(form.isPublic) }}
 			<div class="form-error">
 				{{ form_errors(form.isPublic) }}
 			</div>
+			  {{ form_row(form.imageFile) }}
 			<div class="form-group mb-4">
 				{{ form_row(form.submit) }}
 			</div>
