--- a/templates/pages/recipe/index.html.twig
+++ b/templates/pages/recipe/index.html.twig
@@ -6,7 +6,7 @@
 
 {% block body %}
 	<div class="container mt-4">
-		<h1>Les recettes</h1>
+		<h1>Mes recettes</h1>
 
 
 		 <a href="{{ path('recipe.new') }}  " class="btn btn-info">Créer une recette</a> 
