--- a/templates/pages/home/index.html.twig
+++ b/templates/pages/home/index.html.twig
@@ -20,11 +20,14 @@
 					<div class="card-header">Recette numéro
 						{{ recipe.id }}</div>
 					<div class="card-body">
-						<h4 class="card-title">{{ recipe.name }}</h4>
+						<h4 class="card-title">
+						<a href="{{ path('recipe.show', {id: recipe.id}) }}">{{ recipe.name }}</a></h4>*
+
+						
 						<p class="card-text">{{ recipe.description|slice(0, 100) ~ '...'  }}</p>
 					</div>
 				</div>
-			{% endfor %}
+			{% endfor %} 
 		</div>
 	</div>
 </div>
