--- a/templates/pages/user/admin.html.twig
+++ b/templates/pages/user/admin.html.twig
@@ -6,9 +6,9 @@
 
 {% block body %}
 
-	<div class="container mt-4 text-center">
-		<h1 class="mt-4 text-darl">Pade d'administrateur</h1>
-		<ul class="mt-4 w-50">
+	<div class="container text-center">
+		<h1 class="mt-4 text-dark">Pade d'administrateur</h1>
+		<div class="mt-3 w-50 text-center">
 			<div class="d-grid gap-2">  
 				<button class="btn btn-lg btn-primary mt-5 fs-3" type="button">
 					<a class="nav-link" href="{{ path('ingredient.index') }}">Ingredients</a>
@@ -16,16 +16,20 @@
 				<button class="btn btn-lg btn-primary mt-5 fs-3" type="button">
 					<a class="nav-link" href="{{ path('allergen.index') }}">Allergènes</a>
 				</button>
+				
+				  
 				<button class="btn btn-lg btn-primary mt-5 fs-3" type="button">
-					<a class="nav-link" href="{{ path('recipe.index') }}">Recettes</a>
+					<a class="nav-link" href="{{ path('recipe.admin_index') }}">Recettes</a>
 				</button>
 				<button class="btn btn-lg btn-primary mt-5 fs-3" type="button">
 					<a class="nav-link" href="{{ path('diet.index') }}">Régimes</a>
 				</button>
+				
+
 				<button class="btn btn-lg btn-primary mt-5 fs-3" type="button">
 					<a class="nav-link" href="/users">Patients</a>
 				</button>
-				<button class="btn btn-lg btn-primary mt-5 fs-3" type="button">
+				<button class="btn btn-lg btn-primary mt-5 fs-3 mb-3" type="button">
 					<a class="nav-link" href="{{ path('user.new') }}">Céer un patient</a>
 				</button>
 			</div>
