--- a/templates/partials/_header.html.twig
+++ b/templates/partials/_header.html.twig
@@ -19,25 +19,15 @@
 					</li>
 				{% if app.user %}
 					<li class="nav-item">
-						<a class="nav-link fs-5" href="{{ path('recipe.index') }}">Recettes</a>
+						<a class="nav-link fs-5" href="{{ path('recipe.index') }}">Mes recettes</a>
 					</li>
+						{% endif %}
+{% if app.user %}
 					<li class="nav-item">
-						<a class="nav-link fs-5" href="{{ path('ingredient.index') }}">Ingredients</a>
+						<a class="nav-link fs-5" href="{{ path('user.admin') }}">Admin</a>
 					</li>
-					<li class="nav-item">
-						<a class="nav-link fs-5" href="{{ path('allergen.index') }}">Allergènes</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link fs-5" href="{{ path('diet.index') }}">Régimes</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link fs-5" href="{{ path('user.index') }}">Patients</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link fs-5" href="{{ path('user.new') }}">Céer un patient</a>
-					</li>
-				{% endif %}
-
+					
+			{% endif %}
 </li></ul></div></ul></div>{# <form class="d-flex">
 									<input class="form-control me-sm-2" type="search" placeholder="Rechercher">
 									<button class="btn btn-secondary my-2 my-sm-0" type="submit">Rechercher</button>
