--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -22,10 +22,11 @@
 			<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 		{% endblock %}
 	</head>
-	<body>
+	<body style="display: flex; flex-direction: column; min-height: 100vh;">
 		{% block header %}
 			{% include "partials/_header.html.twig" %}
 		{% endblock %}
 		{% block body %}{% endblock %}
+		{% include "partials/_footer.html.twig" %}
 	</body>
 </html>
