--- a/templates/pages/home/index.html.twig
+++ b/templates/pages/home/index.html.twig
@@ -5,6 +5,7 @@
 {% block body %}
 
 <div class="container mt-4">
+<div class="img-fluid main_bg" style="background-image: url('{{asset('/images/main_bg.img')}}')"></div> 
     <div class="jumbotron">
         <h1 class="display-5 text-center">Sandrine Coupart <br>  diététicienne-nutritionniste</h1>
         <p class="lead">Je m'appelle Sandrine Coupart et je suis diététicienne-nutritionniste dont le cabinet est situé à Caen. En tant que
