--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -11,6 +11,9 @@
 		<link rel="stylesheet" href="{{ asset('assets/css/bootstrap.css') }}">
 		<link
 		rel="stylesheet" href="/style.css">
+		{# <style >
+    .header { background-image: url('/imgages/lmain_bg.img') !important; }
+</style> #}
 		{# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
 		{% block stylesheets %}
 			{{ encore_entry_link_tags('app') }}
