--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -11,9 +11,8 @@
 		<link rel="stylesheet" href="{{ asset('assets/css/bootstrap.css') }}">
 		<link
 		rel="stylesheet" href="/style.css">
-		{# <style >
-    .header { background-image: url('/imgages/lmain_bg.img') !important; }
-</style> #}
+		{# <link rel="bg-img" sizes="1980x1780" href="{{ asset('/assets/images/bg.jpg') }}"> #}
+	
 		{# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
 		{% block stylesheets %}
 			{{ encore_entry_link_tags('app') }}
@@ -25,10 +24,12 @@
 			<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 		{% endblock %}
 	</head>
-	<body style="display: flex; flex-direction: column; min-height: 100vh;">
+	<body style="display: flex; flex-direction: column; min-height: 100vh; width: 100%;">
 		{% block header %}
-			{% include "partials/_header.html.twig" %}
+		{% include "partials/_nav.html.twig" %}
+			{# {% include "partials/_header.html.twig" %} #}
 		{% endblock %}
+	
 		{% block body %}{% endblock %}
 		{% include "partials/_footer.html.twig" %}
 	</body>
