--- a/templates/pages/recipe/index_public.html.twig
+++ b/templates/pages/recipe/index_public.html.twig
@@ -13,6 +13,9 @@
 					<div class="card-body">
 						<h4 class="card-title">
 						<a href="{{ path('recipe.show', {id: recipe.id}) }}">{{ recipe.name }}</a></h4>
+
+						<div class="card-image recipe__image form-image">
+                  {{ form_row(form.imageFile) }}</div>
 						<p class="card-text">{{ recipe.description|slice(0, 100) ~ '...'  }}</p>
 					</div>
 				</div>
