add legal notice, privacy policy

--- a/templates/partials/_footer.html.twig
+++ b/templates/partials/_footer.html.twig
@@ -1,5 +1,12 @@
-<footer>
-<div class="footer-copyright text-center py-3">@2023 Copyright: Iryna.G
-
+<footer class="d-flex flex-row justify-content-around ms-5 me-5 text-center">
+<div>
+	<a class="nav-link fs-5" href="{{ path('footer.legal_notice') }}">Mentions légales</a>
 </div>
+	
+<div class="footer-copyright text-center py-3">@2023 Copyright: Iryna.G
+</div>
+<div>
+<a class="nav-link fs-5" href="{{ path('footer.privacy_policy') }}">Politique de confidentialité</a>
+</div>
+	
 </footer>
