add admin crud controllers

--- a/templates/pages/home/index.html.twig
+++ b/templates/pages/home/index.html.twig
@@ -29,7 +29,9 @@
 				</div>
 			</div>
 
-			<hr class="my-4 mb-5">
+			<hr class="mt-5 mb-5">
+			<br>
+			<br>
 		</div>
 		<div class="d-flex flex-row about align-items-center">
 			<div class="col-md-6 col-sm-6 col-xs-12">
@@ -54,16 +56,15 @@
 					<li>
 						<h5>Suivi grossesse</h5>
 						<p>120€/mois</p>
-
 				</ul>
 			</div>
-
-
 		</div>
-			<hr class="my-4 mb-5">
-		<div class="recipes">
-			<h2 class="mt-4 text-center mb-3">Recettes de base</h2>
-			<div class="d-flex justify-content-between flex-wrap">
+			<hr class="mt-5 mb-5">
+			<br>
+			<br>
+		<div class="recipes mb-5">
+			<h2 class="mt-4 text-center mb-5">Recettes de base</h2>
+			<div class="d-flex justify-content-between flex-wrap mt-4">
 				{% for recipe in recipes %}
 					<div class="card border-primary mb-3" style="max-width: 20rem;">
 						<div class="card-header">Recette numéro
