--- a/templates/pages/user/new.html.twig
+++ b/templates/pages/user/new.html.twig
@@ -75,13 +75,13 @@
 		</div>
 		<br>
 		<hr>
-	<div class="form-group" style="color: rgb(13, 108, 149); font-size: 1.4rem;">
+	{# <div class="form-group" style="color: rgb(13, 108, 149); font-size: 1.4rem;">
 			{{ form_label(form.createdAt) }}
 			{{ form_widget(form.createdAt) }}
 			<div class="form-error">
 				{{ form_errors(form.createdAt) }}
 			</div>
-		</div>
+		</div> #}
 		<br>
 		<hr>
 		<div class="form-group" style="color: rgb(13, 108, 149); font-size: 1.4rem;">
