--- a/templates/partials/_nav.html.twig
+++ b/templates/partials/_nav.html.twig
@@ -12,7 +12,7 @@
 					</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link fs-5" href="#">Contact</a>
+					<a class="nav-link fs-5" href="{{ path('contact.index') }}">Contact</a>
 				</li>
 				<li class="nav-item">
 						<a class="nav-link fs-5" href="{{ path('recipe.index_public') }}">Recettes de base</a>
