--- a/templates/partials/_footer.html.twig
+++ b/templates/partials/_footer.html.twig
@@ -1,12 +1,12 @@
-<footer class="d-flex flex-row justify-content-around ms-5 me-5 text-center">
+<footer class="d-flex flex-row justify-content-around ms-5 me-5 align-items-center text-center bg-primary mt-5">
 <div>
-	<a class="nav-link fs-5" href="{{ path('footer.legal_notice') }}">Mentions légales</a>
+	<a class="nav-link fs-5" href="{{ path('footer.legal_notice') }}" style="color: white;">Mentions légales</a>
 </div>
 	
-<div class="footer-copyright text-center py-3">@2023 Copyright: Iryna.G
+<div class="footer-copyright text-center fs-5" style="color: white;">@2023 Copyright: Iryna.G
 </div>
 <div>
-<a class="nav-link fs-5" href="{{ path('footer.privacy_policy') }}">Politique de confidentialité</a>
+<a class="nav-link fs-5" href="{{ path('footer.privacy_policy') }}" style="color: white;">Politique de confidentialité</a>
 </div>
 	
 </footer>
