add admin button

--- a/templates/pages/ingredient/index.html.twig
+++ b/templates/pages/ingredient/index.html.twig
@@ -1,41 +1,47 @@
 {% extends 'base.html.twig' %}
 
-{% block title %} La liste d'ingrédients {% endblock %}
+{% block title %}
+	La liste d'ingrédients
+{% endblock %}
 
 {% block body %}
-<div class="container mt-4">
-    <h1>Mes ingrédients</h1>
+	<div class="container mt-4">
 
-    <a href="{{ path('ingredient.new') }}  " class="btn btn-info">Créer un ingrédient</a>
-    
-    {% for message in app.flashes('success') %}
-        <div class="alert alert-success">
-            {{ message }}
-        </div>
-    {%endfor %}
-    <table class="table table-hover">
-        <thead>
-        <tr>
-            <th scope="col">Numéro</th>
-            <th scope="col">Nom</th>
-            <th scope="col">Allergène</th>
-            <th scope="col">Edition</th>
-            <th scope="col">Suppression</th>
-        </tr>
-        </thead>
-        <tbody>
-        {% for ingredient in ingredients %}
-            <tr class="table-primary">
-                <th scope="row">{{ ingredient.id }}</th>
-                <td>{{ ingredient.name }}</td>
-                <td>{{ ingredient.isAllergen }}</td>
-                <td><a href="{{ path('ingredient.edit', {id: ingredient.id}) }}" class="btn btn-danger">Modifier</a></td>
-                <td><a href="{{ path('ingredient.delete', {id: ingredient.id}) }}" class="btn btn-warning">Supprimer</a>
-                </td>
-            </tr>
-            
-        {% endfor %}
-        </tbody>
-    </table>
-</div>
+		<h1>Mes ingrédients</h1>
+
+		<a href="{{ path('ingredient.new') }} " class="btn btn-info">Créer un ingrédient</a>
+
+		{% for message in app.flashes('success') %}
+			<div class="alert alert-success">
+				{{ message }}
+			</div>
+		{%endfor %}
+		<table class="table table-hover">
+			<thead>
+				<tr>
+					<th scope="col">Numéro</th>
+					<th scope="col">Nom</th>
+					<th scope="col">Allergène</th>
+					<th scope="col">Edition</th>
+					<th scope="col">Suppression</th>
+				</tr>
+			</thead>
+			<tbody>
+				{% for ingredient in ingredients %}
+					<tr class="table-primary">
+						<th scope="row">{{ ingredient.id }}</th>
+						<td>{{ ingredient.name }}</td>
+						<td>{{ ingredient.isAllergen }}</td>
+						<td>
+							<a href="{{ path('ingredient.edit', {id: ingredient.id}) }}" class="btn btn-danger">Modifier</a>
+						</td>
+						<td>
+							<a href="{{ path('ingredient.delete', {id: ingredient.id}) }}" class="btn btn-warning">Supprimer</a>
+						</td>
+					</tr>
+
+				{% endfor %}
+			</tbody>
+		</table>
+	</div>
 {% endblock %}
