--- a/public/style.css
+++ b/public/style.css
@@ -15,6 +15,7 @@ body {
   min-height: 100vh;
   justify-content: space-between;
   width: 100%;
+  background-color: rgb(135, 219, 237);
 }
 
 .recipe__image {
