--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -26,8 +26,8 @@
 	</head>
 	<body style="display: flex; flex-direction: column; min-height: 100vh; width: 100%;">
 		{% block header %}
-		{% include "partials/_nav.html.twig" %}
-			{# {% include "partials/_header.html.twig" %} #}
+		{% include "partials/_header.html.twig" %}
+		
 		{% endblock %}
 	
 		{% block body %}{% endblock %}
