--- a/templates/pages/user/admin.html.twig
+++ b/templates/pages/user/admin.html.twig
@@ -7,7 +7,7 @@
 {% block body %}
 
 	<div class="container text-center">
-		<h1 class="mt-4 text-dark">Pade d'administrateur</h1>
+		<h1 class="mt-4 text-dark">Page d'administrateur</h1>
 		<div class="mt-3 w-50 text-center">
 			<div class="d-grid gap-2">  
 				<button class="btn btn-lg btn-primary mt-5 fs-3" type="button">
