--- a/templates/pages/user/edit.html.twig
+++ b/templates/pages/user/edit.html.twig
@@ -80,13 +80,13 @@
 		</div>
 		<br>
 		<hr>
-	<div class="form-group" style="color: rgb(13, 108, 149); font-size: 1.4rem;">
+	{# <div class="form-group" style="color: rgb(13, 108, 149); font-size: 1.4rem;">
 			{{ form_label(form.createdAt) }}
 			{{ form_widget(form.createdAt) }}
 			<div class="form-error">
 				{{ form_errors(form.createdAt) }}
 			</div>
-		</div>
+		</div> #}
 		<br>
 		<hr>
 		<div class="form-group" style="color: rgb(13, 108, 149); font-size: 1.4rem;">
@@ -97,14 +97,14 @@
 			</div>
 		</div>
 		<hr>
-			<div class="form-group mb-4" style="color: rgb(13, 108, 149); font-size: 1.4rem;">
+			{# <div class="form-group mb-4" style="color: rgb(13, 108, 149); font-size: 1.4rem;">
 			{{ form_label(form.plainPassword) }}
 			{{ form_widget(form.plainPassword) }}
 			<div class="form-error">
 				{{ form_errors(form.plainPassword) }}
 			</div>
 		</div>
-		
+		 #}
 			<div class="form-group" style="font-size: 1.6rem;">
 				{{ form_row(form.submit) }}
 			</div>
