--- a/templates/pages/home/index.html.twig
+++ b/templates/pages/home/index.html.twig
@@ -7,7 +7,7 @@
 {% block body %}
 
 	<div class="container mt-4">
-		{% include "partials/_header_img.html.twig" %}
+
 		<h1 class="display-5 text-center mb-5 bg-primary py-3" style="z-index: 5; color: white">Sandrine Coupart
 			<br>
 			diététicienne-nutritionniste
@@ -16,7 +16,7 @@
 
 		<div class="jumbotron">
 
-			<div class="d-flex flex-row about align-items-center">
+			<div class="d-flex flex-row justify-content-between about align-items-center">
 				<div class="col-md-6 col-sm-6 col-xs-12  d-flex flex-column text-center">
 					<h3>À  propos</h3>
 					<p class="lead fs-4">Je m'appelle Sandrine Coupart et je suis diététicienne-nutritionniste dont le cabinet est situé à Caen. En tant que
