--- a/templates/pages/recipe/new.html.twig
+++ b/templates/pages/recipe/new.html.twig
@@ -100,7 +100,7 @@
 			{{ form_widget(form.isPublic) }}
 			<div class="form-error">
 				{{ form_errors(form.isPublic) }}
-			</div>
+			</div style="width: 200px;">
 			{{ form_row(form.imageFile) }}
 			<div class="form-group mb-4">
 				{{ form_row(form.submit) }}
