--- a/templates/pages/recipe/show.html.twig
+++ b/templates/pages/recipe/show.html.twig
@@ -75,7 +75,7 @@
 						{% for comment in recipe.comments %}
 							<div class="comment flex justify-start mb-4">
 								<div>
-									<div class="block p-6 rounded-lg shadow-lg bg-white">
+									<div class="block p-6">
 										<div class="md-ml-6">
 										<p>{{ comment.author }}</p>
 											<p class="text-dark fs-5">
