--- a/templates/partials/_nav.html.twig
+++ b/templates/partials/_nav.html.twig
@@ -26,7 +26,7 @@
 			</li>
 			{% if is_granted('ROLE_ADMIN') %}
 					<li class="nav-item">
-						<a href="{{ path('user.admin') }}" class="btn btn-danger position-absolute" style="margin-left: 20%; margin-top: 6px">La page d'administration</a>
+						<a href="{{ path('user.admin') }}" class="btn btn-danger position-relative" >La page d'administration</a>
 					</li>
 				{% endif %}
 		</ul>
