--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -26,7 +26,7 @@
 	</head>
 	<body style="display: flex; flex-direction: column; min-height: 100vh; width: 100%;">
 		{% block header %}
-		{% include "partials/_header.html.twig" %}
+		{% include "partials/_nav.html.twig" %}
 		
 		{% endblock %}
 	
