--- a/templates/pages/home/index.html.twig
+++ b/templates/pages/home/index.html.twig
@@ -5,20 +5,22 @@
 {% endblock %}
 
 {% block body %}
-
+<div style="height: 510px; z-index: -3;">{% include "partials/_header_img.html.twig" %}</div>
+	
+	
 	<div class="container mt-4">
 
 		<h1 class="display-5 text-center mb-5 bg-primary py-3" style="z-index: 5; color: white">Sandrine Coupart
 			<br>
 			diététicienne-nutritionniste
-			<span class="mt-4">{% include "partials/_doctor_img.html.twig" %}</span>
+			<span class="mt-4" class="margin-top: 5em;">{% include "partials/_doctor_img.html.twig" %}</span>
 		</h1>
 
 		<div class="jumbotron">
 
-			<div class="d-flex flex-row justify-content-between about align-items-center">
+			<div class="d-flex flex-row justify-between about align-items-center" style="background-color: rgb(135, 219, 237); height: auto;">
 				<div class="col-md-6 col-sm-6 col-xs-12  d-flex flex-column text-center">
-					<h3>À  propos</h3>
+					<h3 class="mb-5">À  propos</h3>
 					<p class="lead fs-4">Je m'appelle Sandrine Coupart et je suis diététicienne-nutritionniste dont le cabinet est situé à Caen. En tant que
 										            professionnelle de santé, je prends en charge des patients dans le cadre de consultations diététiques.
 										            J'anime également des ateliers de prévention et d’information sur la nutrition.</p>
@@ -33,13 +35,13 @@
 			<br>
 			<br>
 		</div>
-		<div class="d-flex flex-row about align-items-center">
+		<div class="d-flex flex-row about align-items-center about" style="background-color: rgb(135, 219, 237); height: auto;">
 			<div class="col-md-6 col-sm-6 col-xs-12">
 				{% include "partials/_home_img2.html.twig" %}
 			</div>
 			<div class="col-md-6 col-sm-6 col-xs-12 me-2 d-flex flex-column text-center">
-				<h3>Mes services</h3>
-				<ul class="lead fs-4">
+				<h3 class="mb-4">Mes services</h3>
+				<ul class="lead fs-4" style="list-style-type: none;">
 					<li>
 						<h5>Bilan nutritionnel</h5>
 						<p>50€ séance</p>
@@ -63,7 +65,7 @@
 			<br>
 			<br>
 		<div class="recipes mb-5">
-			<h2 class="mt-4 text-center mb-5">Recettes de base</h2>
+			<h2 class="mt-4 text-center mb-5" style="background-color: rgb(135, 219, 237); height: auto;">Recettes de base</h2>
 			<div class="d-flex justify-content-between flex-wrap mt-4">
 				{% for recipe in recipes %}
 					<div class="card border-primary mb-3" style="max-width: 20rem;">
