--- a/templates/partials/_nav.html.twig
+++ b/templates/partials/_nav.html.twig
@@ -25,8 +25,8 @@
 				
 			</li>
 			{% if is_granted('ROLE_ADMIN') %}
-					<li class="nav-item">
-						<a href="{{ path('user.admin') }}" class="btn btn-danger position-relative" >La page d'administration</a>
+					<li class="nav-item d-sm-none d-lg-block lg-ms-5">
+						<a href="{{ path('user.admin') }}" class="btn btn-info  position-relative" >La page d'administration</a>
 					</li>
 				{% endif %}
 		</ul>
