corr twig; controllers and crud controllers

--- a/public/style.css
+++ b/public/style.css
@@ -1,8 +1,6 @@
 .choiceList-wrapper {
   display: flex;
   flex-wrap: wrap;
-  
-
 }
 
 .form-image img {
@@ -15,11 +13,44 @@ body {
   min-height: 100vh;
   justify-content: space-between;
   width: 100%;
-  background-color: rgb(135, 219, 237);
+  background-color: rgb(130 215 233);
 }
 
+h1,
+th {
+  color: white;
+  font-family: "Libre Baskerville", serif;
+}
 
+h2,
+h3,
+h4,
+h5 {
+  color: rgb(45, 44, 44);
+  font-family: "Libre Baskerville", serif;
+}
+
+p,
+li {
+  font-family: "Karla", sans-serif;
+  color: rgb(99, 97, 97);
+}
 .recipe__image {
- width: 300px;
- height: auto;
+  width: 300px;
+  height: auto;
+}
+
+.btn {
+  color: white;
+  background-color: rgb(43, 72, 79);
+}
+.navbar {
+  background-color: rgb(7, 106, 103);
+}
+
+.dropdown-menu {
+  background-color: rgb(49, 181, 176);
+}
+.dropdown-item:hover {
+  background-color: rgb(35, 190, 190);
 }
