--- a/templates/diet/edit.html.twig
+++ b/templates/diet/edit.html.twig
@@ -1,9 +1,9 @@
 {% extends 'base.html.twig' %}
-{% block title %} Éditer l'allergène {% endblock %}
+{% block title %} Éditer le régime {% endblock %}
 {% block body %}
 <div class="container">
 
-<h1 class="mt-4">Modifier l'allergène</h1>
+<h1 class="mt-4">Modifier le régime</h1>
 
 {{ form_start(form) }}
 <div class="form-group">
@@ -18,6 +18,5 @@
 
 </div>
 {% endblock %}
-
 
 
