--- a/templates/pages/footer/legal_notice.html.twig
+++ b/templates/pages/footer/legal_notice.html.twig
@@ -1,13 +1,36 @@
 {% extends 'base.html.twig' %}
-{% block title %} Mentions légales {% endblock %}
-{% block body %}
-<div class="container">
-
-<h1 class="mt-4">Mentions légales</h1>
-
-
-</div>
+{% block title %}
+	Mentions légales
 {% endblock %}
-
-
-
+{% block body %}
+	<div class="container">
+		<h1 class="mt-4 text-center mb-4">Mentions légales</h1>
+		<p>
+			Conformément aux dispositions de la loi n° 2004-575 du 21 juin 2004 pour la confiance en l'économie numérique, il est précisé aux utilisateurs du site www.sandrine-coupart-dieteticienne.fr l'identité des différents intervenants dans le cadre de sa réalisation et de son suivi.
+		</p>
+		<h3 class="mt-4">Edition du site</h3>
+		<p>
+			Le présent site, accessible à l’URL www.sandrine-coupart-dieteticienne.fr (le « Site »), est édité par :
+			<br>
+			Iryna G, résidant 12 rue de le Rive 69000 Lyon, de nationalité Française (France), né(e) le 20/01/1990,
+			<br>
+			Le numéro individuel TVA de l’éditeur est : FR 40 1234565789.
+		</p>
+		<h3 class="mt-4">Hébergement</h3>
+		<p class="mb-4">
+			Le Site est hébergé par la société PlanetHoster,<br>
+			situé 4416 Louis-B.-Mayer Laval, Québec Canada H7P 0G1, (contact téléphonique ou email : (+1) 855 774 4678).
+		</p>
+		<h3 class="mt-4">Directeur de publication</h3>
+		<p class="mb-4">Directeur de la publication du Site est Iryna G.</p>
+		<h3 class="mt-4">Nous contacter</h3>
+		<p class="mb-4"></p>
+		<p>Par téléphone : +33612345678</p>
+		<p>Par email : sandrine_c@diet.fr</p>
+		<p>Par courrier : 12 rue de le Rive 69000 Lyon</p>
+	</p>
+	<h3 class="mt-4">Données personnelles</h3>
+	<p class="mb-4">
+		Le traitement de vos données à caractère personnel est régi par notre Charte du respect de la vie privée, disponible depuis la section "Charte de Protection des Données Personnelles", conformément au Règlement Général sur la Protection des Données 2016/679 du 27 avril 2016 («RGPD»).
+	</p>
+</div>{% endblock %}
