--- a/templates/pages/home/index.html.twig
+++ b/templates/pages/home/index.html.twig
@@ -10,7 +10,7 @@
 	
 	<div class="container mt-4">
 
-		<h1 class="display-5 text-center mb-5 bg-primary py-3" style="z-index: 5; color: white">Sandrine Coupart
+		<h1 class="display-5 text-center mb-5 bg-primary py-3">Sandrine Coupart
 			<br>
 			diététicienne-nutritionniste
 			<span class="mt-4" class="margin-top: 5em;">{% include "partials/_doctor_img.html.twig" %}</span>
@@ -65,15 +65,15 @@
 			<br>
 			<br>
 		<div class="recipes mb-5">
-			<h2 class="mt-4 text-center mb-5" style="background-color: rgb(135, 219, 237); height: auto;">Recettes de base</h2>
-			<div class="d-flex justify-content-between flex-wrap mt-4">
+			<h3 class="mt-4 text-center mb-5" style="background-color: rgb(135, 219, 237); height: auto;">Recettes</h3>
+			<div class="d-flex justify-content-lg-between flex-wrap mt-4 justify-content-sm-center">
 				{% for recipe in recipes %}
 					<div class="card border-primary mb-3" style="max-width: 20rem;">
 						<div class="card-header">Recette numéro
 							{{ recipe.id }}</div>
 						<div class="card-body">
 							<h4 class="card-title">
-								<a href="{{ path('recipe.show', {id: recipe.id}) }}">{{ recipe.name }}</a>
+								<a href="{{ path('recipe.show_public', {id: recipe.id}) }}">{{ recipe.name }}</a>
 							</h4>
 							<div class="recipe__image card-image">
 								<img style="max-width: 350px;" src="{{ vich_uploader_asset(recipe, 'imageFile') }}">
