--- a/templates/partials/_nav.html.twig
+++ b/templates/partials/_nav.html.twig
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary text-light">
 	<div class="container-fluid">
 		<a class="navbar-brand" href="#"></a>
 		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
@@ -7,59 +7,58 @@
 		<div class="collapse navbar-collapse" id="navbarColor01">
 			<ul class="navbar-nav me-auto">
 				<li class="nav-item">
-					<a class="nav-link fs-5 active" href="/">Accueil
+					<a class="nav-link fs-5 active fw-bold" href="/">Accueil
 						<span class="visually-hidden">(current)</span>
 					</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link fs-5" href="{{ path('contact.index') }}">Contact</a>
+					<a class="nav-link fs-5 fw-bold" href="{{ path('contact.index') }}">Contact</a>
 				</li>
-				<li class="nav-item">
-					<a class="nav-link fs-5" href="{{ path('recipe.index_public') }}">Recettes de base</a>
-				</li>
-				{% if app.user %}
+				
+				 {% if is_granted('ROLE_ADMIN') %}
+					<li class="nav-item lg-ms-5">
+						<a class="nav-link fs-5 fw-bold" href="{{ path('recipe.recipes') }}"> Collection de recettes</a>
+
+				{% elseif app.user %}
 					<li class="nav-item">
-						<a class="nav-link fs-5" href="{{ path('recipe.index') }}">Mes recettes</a>
+						<a class="nav-link fs-5 fw-bold" href="{{ path('recipe.index') }}">Mes recettes</a>
 					</li>
+				
+					{% else %}
+					<li class="nav-item">
+					<a class="nav-link fs-5 fw-bold" href="{{ path('recipe.index_public') }}">Recettes</a>
+				</li>
 				{% endif %}
 				
-			</li>
-			{% if is_granted('ROLE_ADMIN') %}
-					<li class="nav-item d-sm-none d-lg-block lg-ms-5">
-						<a href="{{ path('user.admin') }}" class="btn btn-info  position-relative" >La page d'administration</a>
-					</li>
-				{% endif %}
+			</li> 
+			
 		</ul>
 	</div>
 </div>
-{# <form class="d-flex">
-	  <input class="form-control me-sm-2" type="search" placeholder="Rechercher">
-		<button class="btn btn-secondary my-2 my-sm-0" type="submit">Rechercher</button>
-				</form> #}
+
 <div class="d-flex">
 
 <ul class="navbar-nav me-auto">
 
 	{% if app.user %}
 		<li class="nav-item dropdown" style="margin-right: 5rem;">
-			<a class="nav-link dropdown-toggle fs-5" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">{{ app.user.fullName }}</a>
+			<a class="nav-link dropdown-toggle fs-5 fw-bold" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false" style="color: white;">{{ app.user.fullName }}</a>
 			<div class="dropdown-menu">
-				<a class="dropdown-item" href="{{ path('user.edit', {id: app.user.id}) }}">Modifier mes informations</a>
+				{# <a class="dropdown-item" href="{{ path('user.edit', {id: app.user.id}) }}">Modifier mes informations</a> #}
 
 				{% if 'ROLE_ADMIN' in app.user.roles %}
-					<a class="dropdown-item" href="/admin">Tableau de bord</a>
-					<a class="dropdown-item" href="/admin_office">Bureau d'administrateur</a>
+					<a class="dropdown-item  fw-bold" href="/admin">Tableau de bord</a>
 				{% endif %}
 
 
 				<div class="dropdown-divider"></div>
-				<a class="dropdown-item" href="{{ path('security.logout') }}">Déconnextion</a>
+				<a class="dropdown-item fw-bold" href="{{ path('security.logout') }}">Déconnextion</a>
 
 			{% else %}
-				<li class="nav-item">
+				<li class="nav-item me-2 fs-5 fw-bold">
 					<a class="nav-link" href="/connexion">Connexion</a>
 				</li>
-				<li class="nav-item">
+				<li class="nav-item me-4 fs-5 fw-bold">
 					<a class="nav-link" href="/inscription">Inscription</a>
 				</li>
 			{% endif %}
