--- a/templates/recipe/index.html.twig
+++ b/templates/recipe/index.html.twig
@@ -1,21 +1,22 @@
 {% extends 'base.html.twig' %}
 {% block title %}
-	La liste de recettes
+	Mes recettes
 {% endblock %}
 {% block body %}
 	<div class="container mt-4">
-		<h1>Recettes de base</h1>
+		<h1>Mes recettes</h1>
 		<div class="d-flex justify-content-center flex-wrap">
 			{% for recipe in recipes %}
-				<div class="card border-primary mb-3 me-3" style="max-width: 20rem;">
+				<div class="card border-primary mb-3 me-3" style="width: 20rem;">
 					<div class="card-header">Recette numéro
 						{{ recipe.id }}</div>
 					<div class="card-body">
 						<h4 class="card-title">
-						<a href="{{ path('recipe.show', {id: recipe.id}) }}">{{ recipe.name }}</a></h4>
-
-						{# <div class="card-image recipe__image form-image">
-                  {{ form_row(form.imageFile) }}</div> #}
+							<a href="{{ path('recipe.show', {id: recipe.id}) }}">{{ recipe.name }}</a>
+						</h4>
+						<div class="recipe__image card-image">
+							<img style="max-width: 350px;" src="{{ vich_uploader_asset(recipe, 'imageFile') }}">
+						</div>
 						<p class="card-text">{{ recipe.description|slice(0, 100) ~ '...'  }}</p>
 					</div>
 				</div>
