--- a/templates/recipe/recipes.html.twig
+++ b/templates/recipe/recipes.html.twig
@@ -7,28 +7,20 @@
 {% block body %}
 	<div class="container mt-4">
 		<h1>Mes recettes</h1>
-
-
-		<a href="{{ path('recipe.new') }} " class="btn btn-info">Créer une recette</a>
-
+		<a href="{{ path('recipe.new') }}" class="btn btn-info">Créer une recette</a>
 		{% for message in app.flashes('success') %}
 			<div class="alert alert-success">
 				{{ message }}
 			</div>
-		{%endfor %}
+		{% endfor %}
+
 		<table class="table table-hover">
 			<thead>
 				<tr>
 					<th scope="col">Numéro</th>
 					<th scope="col text-uppercase">Nom</th>
-					<th scope="col">Description</th>
-					<th scope="col">Temps de préparation</th>
-					<th scope="col">temps de pause</th>
-					<th scope="col">Temps de cuisson</th>
-					<th scope="col">Ingredients</th>
-					<th scope="col">Étapes</th>
-					<th scope="col">Allergènes</th>
-					<th scope="col">Régime</th>
+					<th scope="col">Régime</th> 
+					<th scope="col">Voir</th>
 					<th scope="col">Edition</th>
 					<th scope="col">Suppression</th>
 				</tr>
@@ -38,32 +30,13 @@
 					<tr class="table-primary">
 						<th scope="row">{{ recipe.id }}</th>
 						<td class="text-capitalize">{{ recipe.name }}</td>
-						<td>{{ recipe.description }}</td>
-						<td>{{ recipe.preparationTime }}</td>
-						<td>
-							{% if  recipe.pauseTime is null %}
-								'...'
-							{% else %}
-								{{ recipe.pauseTime }}
-							{% endif %}
-						</td>
-						<td>{{ recipe.cookingTime }}</td>
-						<td>
-							{% for ingredient in recipe.ingredients %}
-								{{ ingredient.name }}
-							{% endfor %}
-
-						</td>
-						<td>{{ recipe.steps }}</td>
-						<td>
-							{% for allergen in recipe.allergens %}
-								{{ allergen.name }}
-							{% endfor %}
-						</td>
 						<td>
 							{% for diet in recipe.diets %}
 								{{ diet.name }}
 							{% endfor %}
+						</td> 
+						<td>
+							<a href="{{ path('recipe.show', {id: recipe.id}) }}" class="btn btn-info">Voir</a>
 						</td>
 						<td>
 							<a href="{{ path('recipe.edit', {id: recipe.id}) }}" class="btn btn-danger">Modifier</a>
@@ -72,9 +45,8 @@
 							<a href="{{ path('recipe.delete', {id: recipe.id}) }}" class="btn btn-warning">Supprimer</a>
 						</td>
 					</tr>
-				</tbody>
+				{% endfor %}
 			</tbody>
-		</tr>
-	{% endfor %}
-
-</tbody></table></div>{% endblock %}
+		</table>
+		</div>
+		{% endblock %}
