--- a/templates/recipe/show_public.html.twig
+++ b/templates/recipe/show_public.html.twig
@@ -1,7 +1,6 @@
 {% extends 'base.html.twig' %}
-
 {% block title %}
-	La recette
+	La recette publique
 	{{ recipe.name }}
 {% endblock %}
 
@@ -11,13 +10,12 @@
 			<div class="alert alert-success">
 				{{ message }}
 			</div>
-		{%endfor %}
+		{% endfor %}
 		<h1 class="mt-4">{{ recipe.name }}</h1>
 
 		<div class="recipe__image">
 			<img style="max-width: 350px;" src="{{ vich_uploader_asset(recipe, 'imageFile') }}">
 		</div>
-
 
 		<p>La moyenne de cette recette est de
 			{{ recipe.average|number_format(2,'.', '.') }}
@@ -54,44 +52,41 @@
 		</p>
 		{{ recipe.steps|raw }}
 
-
 		<p class="mt-3 text-dark">Allergènes :
 			{% for allergen in recipe.allergens %}
 				<span class="badge bg-primary">{{ allergen.name }}</span>
 			</p>
 		{% endfor %}
 
-
 		<p class="mt-3 text-dark">Régime :</p>
 		{% for diets in recipe.diets %}
 			<span class="badge bg-primary mt-1">{{ diets.name }}</span>
 		{% endfor %}
-<div>
-{% if formMark is defined %}
-		{{ form_start(formMark) }}
+		<div>
+			{% if formMark is defined %}
+				{{ form_start(formMark) }}
 
-						{{ form_label(formMark.mark) }}
-						{{ form_widget(formMark.mark) }}
-						{{ form_row(formMark.submit) }}
-					
-		{{ form_end(formMark) }}
-		{% endif %}
+				{{ form_label(formMark.mark) }}
+				{{ form_widget(formMark.mark) }}
+				{{ form_row(formMark.submit) }}
+				{{ form_end(formMark) }}
+			{% endif %}
 		</div>
-			<div class="mt-5"> <h2 class="text-2xl mb-8">Commentaire(s)</h2>
+		<div class="mt-5">
+			<h2 class="text-2xl mb-8">Commentaire(s)</h2>
 			<div class="comments">
-			{% if app.user %}
-				<div class="comments__new">
-					<div class="w-full-width">
-						{{ form_start(formComment) }}
+				{% if app.user %}
+					<div class="comments__new">
+						<div class="w-full-width">
+							{{ form_start(formComment) }}
 
-						{{ form_label(formComment.content) }}
-						{{ form_widget(formComment.content) }}
-						{{ form_row(formComment.submit) }}
-					
-						{{ form_end(formComment) }}
+							{{ form_label(formComment.content) }}
+							{{ form_widget(formComment.content) }}
+							{{ form_row(formComment.submit) }}
+							{{ form_end(formComment) }}
+						</div>
 					</div>
-				</div>
-{% endif %}
+				{% endif %}
 				{% for comment in recipe.comments %}
 					{% if comment.isApproved %}
 						<div class="comment flex justify-start mb-4">
@@ -111,7 +106,11 @@
 
 					{% endif %}
 				{% endfor %}
+				<div class="text-center">
+					<button class="btn btn-primary" href="{{ path('recipe.index.public') }}">{{ button_label|default('Vers la liste de recettes') }}</button>
+				</div>
 			</div>
 		</div>
 	</div>
-</div>{% endblock %}
+
+</div></div>{% endblock %}
